fix overlap current allo

--- a/wp-content/themes/arbitrage-child/journal_style.css
+++ b/wp-content/themes/arbitrage-child/journal_style.css
@@ -521,7 +521,7 @@ img.arb_newpostimg {
 }
 #chartdiv4a {
     width: 100%;
-    height: 220px;
+    height: 133px;
 }
 #chartdiv4b {
     width: 100%;
